[gd_scene load_steps=28 format=3 uid="uid://cwuq5a5yox5wk"]

[ext_resource type="Script" path="res://scenes/game_object/wizard_enemy_2/wizard_enemy_2.gd" id="1_yv42p"]
[ext_resource type="PackedScene" uid="uid://b8sr3newe0a1p" path="res://scenes/component/health_component.tscn" id="2_7h580"]
[ext_resource type="PackedScene" uid="uid://bwttvy7ixc2sp" path="res://scenes/component/vial_drop_component.tscn" id="3_d1wbr"]
[ext_resource type="PackedScene" uid="uid://bng2yq4o01wxb" path="res://scenes/component/velocity_component.tscn" id="4_dxh51"]
[ext_resource type="PackedScene" uid="uid://d0dkyt6wbjbse" path="res://scenes/game_object/experience_vial/experience_vial_3.tscn" id="4_tf00t"]
[ext_resource type="PackedScene" uid="uid://bbowypg1aeqyq" path="res://scenes/component/death_component.tscn" id="5_mssgs"]
[ext_resource type="PackedScene" uid="uid://8ndgdfwhqjko" path="res://scenes/component/hit_flash_component.tscn" id="6_kj2uv"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="7_t373f"]
[ext_resource type="PackedScene" uid="uid://dfi2k4sdd80kx" path="res://scenes/component/random_audio_stream_player_2d_component.tscn" id="8_a7ots"]
[ext_resource type="AudioStream" uid="uid://1exj08exllsh" path="res://assets/audio/footstep_carpet_000.ogg" id="9_g7for"]
[ext_resource type="AudioStream" uid="uid://chehk211a021i" path="res://assets/audio/footstep_carpet_001.ogg" id="10_uaete"]
[ext_resource type="AudioStream" uid="uid://bvoutpdhjk64e" path="res://assets/audio/footstep_carpet_002.ogg" id="11_n3fhm"]
[ext_resource type="AudioStream" uid="uid://cs578hyiisbaw" path="res://assets/audio/footstep_carpet_003.ogg" id="12_7bdtb"]
[ext_resource type="AudioStream" uid="uid://b3teaqhe50ieu" path="res://assets/audio/footstep_carpet_004.ogg" id="13_gx00b"]
[ext_resource type="PackedScene" uid="uid://b5jqwtbqykd6b" path="res://scenes/component/hurt_box_component.tscn" id="14_arpla"]
[ext_resource type="Texture2D" uid="uid://cby4kwaw2lnud" path="res://scenes/game_object/wizard_enemy_2/wizard_enemy_2.png" id="15_jvmpo"]
[ext_resource type="Texture2D" uid="uid://cy66fhibchmk3" path="res://scenes/game_object/wizard_enemy_2/particle.png" id="16_y21cg"]

[sub_resource type="Animation" id="Animation_n5i5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4r3pd"]
resource_name = "teleport"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"teleport"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fb7ak"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, -2), Vector2(0, -3), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.174533, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cjxxn"]
_data = {
"RESET": SubResource("Animation_n5i5o"),
"teleport": SubResource("Animation_4r3pd"),
"walk": SubResource("Animation_fb7ak")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lc8rg"]
resource_local_to_scene = true
shader = ExtResource("7_t373f")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e34ib"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a1xu1"]
radius = 5.0

[sub_resource type="Curve" id="Curve_vc3aq"]
_data = [Vector2(0, 1), 0.0, 3.56419, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xqdl4"]
curve = SubResource("Curve_vc3aq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q3gpa"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 70.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 100.0
damping_max = 100.0
scale_min = 0.5
scale_max = 0.8
scale_curve = SubResource("CurveTexture_xqdl4")

[node name="WizardEnemy2" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_yv42p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_cjxxn")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_7h580")]
max_health = 65.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_d1wbr")]
drop_percent = 0.7
health_component = NodePath("../HealthComponent")
vial_scene = ExtResource("4_tf00t")

[node name="VelocityComponent" parent="." instance=ExtResource("4_dxh51")]
max_speed = 70
acceleration = 40.0

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_mssgs")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_kj2uv")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_lc8rg")

[node name="RandomHitAudioPlayerComponent" parent="." instance=ExtResource("8_a7ots")]
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("9_g7for"), ExtResource("10_uaete"), ExtResource("11_n3fhm"), ExtResource("12_7bdtb"), ExtResource("13_gx00b")])

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("14_arpla")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_e34ib")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("15_jvmpo")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_a1xu1")

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.90625, 0.269531, 0.214844, 1)
position = Vector2(0, -7)
amount = 16
process_material = SubResource("ParticleProcessMaterial_q3gpa")
texture = ExtResource("16_y21cg")
one_shot = true
explosiveness = 1.0
fixed_fps = 0
interpolate = false

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
modulate = Color(0.90625, 0.269531, 0.214844, 1)
position = Vector2(0, -7)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_q3gpa")
texture = ExtResource("16_y21cg")
one_shot = true
explosiveness = 1.0
fixed_fps = 0
interpolate = false
